Nav bar + project links

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<h5> Bachelor of Science in Computer Science <br /> Minor in Mind-Brain Studies</h5>
 								<ul>
 										<li>Honors: Clark Engineering Scholar, Presidential Scholar, Dean's Honor List, </li>
-										<li>Activities: ACM, Engineers Without Borders, Systems Hacking Club, Chess Club</li>
+										<li>Activities: Hackital, Association for Computing Machinary, Engineers Without Borders, Student Peer Advisory Network, Chess Club</li>
 								</ul>
 								<br />
 								<span class="image main"><img src="images/portland.jpg" alt="" /></span>
@@ -110,7 +110,7 @@
           $recComplete = $row['complete'];
           }
   }</code></pre>
-								<b><h3>Application Processing System</h3></b>
+								<h3><a href="http://gwupyterhub.seas.gwu.edu/~sp19DBp1-TheRockhoppers/TheRockhoppers/public_html/signup.php">Application Processing System</a></h3>
 								<h4>PHP | MySQL | HTML | CSS</h4>
 								<ul>
 									<li>Created an application processing system for Masters/PhD students. This system enables students to apply to graduate programs and adminstration to review, admit, and analyze data of Masters/PhD applicants. </li>
