--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<li>Activities: Hackital, Association for Computing Machinary, Engineers Without Borders, Student Peer Advisory Network, Chess Club</li>
 								</ul>
 								<br />
-								<span class="image main"><img src="images/portland.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Portland.jpg" alt="" /></span>
 								<h3>Sherwood High School – June 2017</h3>
 								<h5>Advanced Honors Diploma</h5>
 								<ul>
