Adding social media links & email functionality

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#Education">Education</a></li>
 								<li><a href="#Projects">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#Resume">Resume</a></li>
+								<!-- <li><a href="#Resume">Resume</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -122,7 +122,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="sendEmail.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -143,10 +143,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/arjun-vijay-708129133/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/Arjun-Vijay" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.facebook.com/profile.php?id=100007986194770" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/arjun_vijay/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
 
