--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<b><h3>DC Metro Navigator</h3></b>
 								<h4>Kotlin | Android Studio | WMATA API</h4>
 								<ul>
-									<li>Android app which provides metro directions to a metro station in D.C/Maryland area </li>
+									<li>Android app which provides metro directions to a metro station in D.C/Maryland</li>
 									<li>Collects real-time updates of any metro alerts that the user may encounter during their ride</li>
 								</ul>
 								<hr />
