--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 								<b><h3>DC Metro Navigator</h3></b>
 								<h4>Kotlin | Android Studio | WMATA API</h4>
 								<ul>
-									<li>Android app which provides metro directions to a metro station in D.C/Maryland/Virginia</li>
-									<li>Collects real-time updates of any metro alerts that the user may encounter during their ride</li>
+									<li>Android app which provides metro directions to a metro station in the D.C/Maryland/Virginia area</li>
+									<li>Displays real-time updates of any metro alerts that the user may encounter during their ride</li>
 								</ul>
 								<hr />
 								<pre><code>$query = "select * from rec_letters where uid='$uid'";
