--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="">
+								<form>
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
